# face-authentication

./: .gitignore  Dockerfile  LICENSE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  release.yaml
app/: main.py
app/api/: __init__.py
app/api/v1/: __init__.py  routes.py  tags.py
app/api/v1/auth/: __init__.py  auth.py  routes.py
app/api/v1/users/: __init__.py  routes.py  user.py
app/api/v1/utils/: __init__.py  routes.py  utils.py
app/core/: __init__.py  auth.py  db.py  exceptions.py  face_api.py  settings.py  token.py  utils.py
app/core/models/: __init__.py  users.py
